<resources>
    <string name="app_name">SociSnap</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="no_account_create_account">Dont have Account? Create Account.</string>
    <string name="logo">SociSnap Logo</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>