<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E425DDCB"
    tools:context=".SplashScreenActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:id="@+id/logo"
                android:textColor="@color/white"
                android:textSize="48sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:background="#E425DDCB"
                android:text="@string/app_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:background="#30DCCB"
                    android:src="@drawable/splash_screen"
                    android:id="@+id/splash_image"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/btnLayout"
                    android:visibility="invisible"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnLoginSplash"
                        android:layout_width="200dp"
                        android:layout_height="60dp"
                        android:textSize="18sp"
                        android:backgroundTint="#0B0B45"
                        android:text="@string/sign_in"
                        android:textColor="@color/white"
                        android:textAllCaps="false" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSignUpSplash"
                        android:layout_width="200dp"
                        android:layout_height="60dp"
                        android:textSize="18sp"
                        android:layout_below="@id/btnLoginSplash"
                        android:text="@string/sign_up"
                        android:backgroundTint="#0B0B45"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />
                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>