<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_one"
    tools:context=".LoginActivity">



    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:id="@+id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        android:layout_marginTop="10dp"
        android:src="@drawable/baseline_person"
        android:background="@drawable/custom_avatar"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="Avatar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/widgets"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                android:background="@drawable/custom_edit_text"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:padding="10sp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/light_grey" />

            <EditText
                android:id="@+id/password_toggle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/email"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/custom_edit_text"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="10sp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/light_grey" />

                <LinearLayout
                    android:id="@+id/rem_forgot"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_below="@id/password_toggle"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/remember_me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:checked="true"
                        android:padding="5sp"
                        android:text="@string/remember_me"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:padding="5sp"
                        android:text="@string/forgot_password"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textColor="#0022FF"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_below="@+id/rem_forgot"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/custom_avatar"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/create_acc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnLogin"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:padding="5sp"
                    android:text="@string/no_account_create_account"
                    android:textColor="#0022FF"
                    android:textSize="16sp"
                    android:textStyle="bold" />

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>